tests/cases/smoke/invalid/class_super_not_supported.dp
class Fish {
    pub func run() -> none {
        super()
    }
}
